aggiunte alcune spiegazioni e typo

--- a/index.html
+++ b/index.html
@@ -571,8 +571,14 @@
             <br>In ogni pacchetto ci sono 3 carte "speciali" diverse tra loro.
             <br>
 
+            <br>Affidabilità probabilistica:
+            <br>La composizione del set e gli eventuali pull rate sono in parte certi, in parte speculazioni.
+            <br>Tecnicamente però, il software prepara degli array (delle scatole) in cui inserisce virtualmente tutte le carte esistenti (sono centinaia di migliaglia ma i pc odierni non fanno fatica a gestirle).
+            <br>Quando viene aperto un box ed i relativi pacchetti vengono estratte casualmente le carte e rimosse dagli array, proprio come se apriste un box trovando le carte tra quelle disponibili nel mondo reale.
+            <br>Questo fa si che le carte che trovate in un pacchetto vengano rimosse dalle carte trovabili nei pacchetti successivi, ottenendo la resa statistica più affidabile possibile. Proprio come avverrebbe nella realtà.
+
             <br>P.S. se avete nozioni di Javascript, in questo caso combinato ad Alpine.js, potete visionare il codice sorgente in quanto non l'ho offuscato in alcun modo.
-            <br>Se avete correzioni di qualsiasi tipo o volete discutere le ipotesi potete cercarmi su Telegram nel gruppo dedicato, nel dubbio chiedete di "Simosauro".
+            <br>Se avete correzioni di qualsiasi tipo o volete discutere le ipotesi o il codice potete cercarmi su Telegram nel gruppo dedicato, nel dubbio chiedete di "Simosauro".
             <br>
             
             <br>P.P.S. questo progetto l'ho fatto in 2 sere per noia e curiosità, quindi perdonate la poca professionalità e la mancanza del responsive.
@@ -580,7 +586,7 @@
     </div>
     <div class="row g-0 p-1 mb-2 bg-dark">
         <div class="col col-6 ps-2 text-secondary">
-            <span> <b style="cursor: pointer" @click="infoProb()"><u>Como sono stati ottenuti questi dati?</u></b> </span>
+            <span> <b style="cursor: pointer" @click="infoProb()"><u>Come sono stati ottenuti questi dati?</u></b> </span>
         </div>
         <div class="col col-3 d-flex flex-wrap pe-4 text-secondary align-items-center justify-content-end">
             <span>Legenda: </span>
