modificati alcuni testi

--- a/index.html
+++ b/index.html
@@ -585,10 +585,10 @@
         </div>
     </div>
     <div class="row g-0 p-1 mb-2 bg-dark">
-        <div class="col col-6 ps-2 text-secondary">
+        <div class="col col-3 ps-2 text-secondary">
             <span> <b style="cursor: pointer" @click="infoProb()"><u>Come sono stati ottenuti questi dati?</u></b> </span>
         </div>
-        <div class="col col-3 d-flex flex-wrap pe-4 text-secondary align-items-center justify-content-end">
+        <div class="col col-6 d-flex flex-wrap pe-4 text-secondary align-items-center justify-content-end">
             <span>Legenda: </span>
             <div class="card me-1 ms-2 d-flex align-items-center justify-content-center golded">
                 <span> 1 </span>
@@ -604,11 +604,11 @@
             <div class="card me-1 ms-2 d-flex align-items-center justify-content-center golded">
                 <span> 1 </span>
             </div>
-            <span>New card</span>
+            <span>New</span>
             <div class="card d-flex align-items-center justify-content-center me-1 ms-3">
                 <span> 1 </span>
             </div>
-            <span>Duplicate card</span>
+            <span>Duplicate</span>
         </div>
     </div>
     <div class="container-fluid">
